--- a/tutorials/example_using_airborne_data.ipynb
+++ b/tutorials/example_using_airborne_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example working with airborne imaging spectroscpy data over northern California\n",
+    "# Example working with airborne imaging spectroscopy data over northern California\n",
     "\n",
     "\n",
     "data \n",
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results are comparable to study that used similar method, see: https://doi.org/10.1016/j.rse.2021.112499\n"
+    "See method being also used here : https://doi.org/10.1016/j.rse.2021.112499\n"
    ]
   }
  ],
