--- a/tutorials/example_using_airborne_data.ipynb
+++ b/tutorials/example_using_airborne_data.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -133,15 +133,14 @@
     }
    ],
    "source": [
-    "import hysnr\n",
+    "import hyperquest\n",
     "\n",
     "# get wavelengths\n",
-    "wavelengths = hysnr.read_center_wavelengths(raster_path)\n",
+    "wavelengths = hyperquest.read_center_wavelengths(raster_path)\n",
     "\n",
     "# compute HRDSDC\n",
-    "snr = hysnr.hrdsdc(raster_path, n_segments=1000, \n",
-    "                   compactness=0.1, \n",
-    "                   n_pca=3, ncpus=3)\n",
+    "snr = hyperquest.hrdsdc(raster_path, n_segments=1000, \n",
+    "                        compactness=0.1, n_pca=3, ncpus=3)\n",
     "\n",
     "plt.scatter(wavelengths, snr, color='black', s=100, alpha=0.7)\n",
     "plt.xticks(rotation=45, ha='right')\n",
