--- a/tutorials/example_using_airborne_data.ipynb
+++ b/tutorials/example_using_airborne_data.ipynb
@@ -36,6 +36,7 @@
     "\n",
     "# Define the path to your hyperspectral raster\n",
     "raster_path = '../tests/data/ca-test'\n",
+    "hdr_path = '../tests/data/ca-test.hdr'\n",
     "\n",
     "# Open the raster file\n",
     "with rasterio.open(raster_path) as src:\n",
@@ -136,10 +137,10 @@
     "import hyperquest\n",
     "\n",
     "# get wavelengths\n",
-    "wavelengths = hyperquest.read_center_wavelengths(raster_path)\n",
+    "wavelengths = hyperquest.read_center_wavelengths(hdr_path)\n",
     "\n",
     "# compute HRDSDC\n",
-    "snr = hyperquest.hrdsdc(raster_path, n_segments=5000, \n",
+    "snr = hyperquest.hrdsdc(hdr_path, n_segments=5000, \n",
     "                        compactness=0.1, n_pca=3, ncpus=3)\n",
     "\n",
     "plt.scatter(wavelengths, snr, color='black', s=100, alpha=0.7)\n",
@@ -198,7 +199,7 @@
     "\n",
     "plt.figure(figsize=(8, 6))\n",
     "for params, color in zip(params_list, colors):\n",
-    "    snr = hyperquest.hrdsdc(raster_path, **params)\n",
+    "    snr = hyperquest.hrdsdc(hdr_path, **params)\n",
     "    plt.plot(wavelengths, snr, color=color, label=f\"Segments: {params['n_segments']}\")\n",
     "\n",
     "# Add labels and title\n",
