--- a/tutorials/testing_smile_methods.ipynb
+++ b/tutorials/testing_smile_methods.ipynb
@@ -94,7 +94,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# nodd_o2a()"
+    "# nodd_o2a()\n",
+    "\n",
+    "for reference here are the params I used for running radiative transfer:\n",
+    "```python\n",
+    "run_libradtran(22.8, # h2o in mm   estimate from MODIS\n",
+    "               0.122, # AOT@550   estimate from MODIS\n",
+    "               9.274039, # mean VZA from OBS file (EMIT L1B)\n",
+    "               11.815027, # mean VAA from OBS file (EMIT L1B)\n",
+    "               hdr_path, \n",
+    "               ncpus=2,\n",
+    "               libradtran_path=my_lrt_path)"
    ]
   },
   {
