--- a/tutorials/testing_smile_methods.ipynb
+++ b/tutorials/testing_smile_methods.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,9 +107,9 @@
      "output_type": "stream",
      "text": [
       "/opt/homebrew/lib/python3.11/site-packages/hyperquest/optimization.py:19: RuntimeWarning: invalid value encountered in divide\n",
-      "  l_toa_model = np.trapz(rtm_radiance * srf, dx=1) / np.trapz(srf, dx=1)\n",
+      "  l_toa_model = np.trapz(l_toa_rtm * srf, dx=1) / np.trapz(srf, dx=1)\n",
       "/opt/homebrew/lib/python3.11/site-packages/hyperquest/optimization.py:19: RuntimeWarning: invalid value encountered in divide\n",
-      "  l_toa_model = np.trapz(rtm_radiance * srf, dx=1) / np.trapz(srf, dx=1)\n"
+      "  l_toa_model = np.trapz(l_toa_rtm * srf, dx=1) / np.trapz(srf, dx=1)\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
