--- a/tutorials/example_using_PRISMA_co-reg.ipynb
+++ b/tutorials/example_using_PRISMA_co-reg.ipynb
@@ -25,7 +25,7 @@
     "import hyperquest\n",
     "\n",
     "# Example usage\n",
-    "hdr_path = '/Users/brent/Documents/DEM_DATA/PRISMA/DENALI/PRS_20210321213856_20210321213901_0001/PRS_20210321213856_20210321213901_0001_rdn.hdr'\n"
+    "path_to_data = '/Users/brent/Documents/DEM_DATA/PRISMA/DENALI/PRS_20210321213856_20210321213901_0001/PRS_20210321213856_20210321213901_0001_rdn.hdr'\n"
    ]
   },
   {
@@ -46,8 +46,8 @@
    ],
    "source": [
     "# Load raster\n",
-    "img_path = hyperquest.get_img_path_from_hdr(hdr_path)\n",
-    "array = np.array(envi.open(hdr_path, img_path).load(), dtype=np.float64)\n",
+    "img_path = hyperquest.get_img_path_from_hdr(path_to_data)\n",
+    "array = np.array(envi.open(path_to_data, img_path).load(), dtype=np.float64)\n",
     "red = array[:,:,45]\n",
     "blue = array[:,:,15]\n",
     "green = array[:,:,34]\n",
@@ -86,7 +86,7 @@
     "\n",
     "\n",
     "# Compute spatial shifts with sub-pixel refinement\n",
-    "x_shift, y_shift = hyperquest.sub_pixel_shift(hdr_path, band_index_vnir, band_index_vswir, no_data_value=-9999)\n",
+    "x_shift, y_shift = hyperquest.sub_pixel_shift(path_to_data, band_index_vnir, band_index_vswir, no_data_value=-9999)\n",
     "\n",
     "\n",
     "print(f'x shift: {x_shift} pix,  y shift: {y_shift} pix')\n"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
     "\n",
     "\n",
     "# Compute spatial shifts with sub-pixel refinement\n",
-    "x_shift, y_shift = hyperquest.sub_pixel_shift(hdr_path, band_index_vnir, band_index_vswir, no_data_value=-9999)\n",
+    "x_shift, y_shift = hyperquest.sub_pixel_shift(path_to_data, band_index_vnir, band_index_vswir, no_data_value=-9999)\n",
     "\n",
     "\n",
     "print(f'x shift: {x_shift} pix,  y shift: {y_shift} pix')"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
     "\n",
     "# Compute sub-pixel shifts for each band combination\n",
     "for vnir, vswir in band_combinations:\n",
-    "    x_shift, y_shift = hyperquest.sub_pixel_shift(hdr_path, vnir, vswir, no_data_value=-9999)\n",
+    "    x_shift, y_shift = hyperquest.sub_pixel_shift(path_to_data, vnir, vswir, no_data_value=-9999)\n",
     "    x_shifts.append(x_shift)\n",
     "    y_shifts.append(y_shift)\n",
     "\n",
