--- a/tutorials/example_2.ipynb
+++ b/tutorials/example_2.ipynb
@@ -229,8 +229,13 @@
    "metadata": {},
    "source": [
     "### K-eff=41 is probably too large given this image (?).\n",
-    "TODO: assess method of Asad Mahmood et al., https://ieeexplore.ieee.org/abstract/document/8077550 for correlated noise. Methods like this will bring down the k-eff values."
+    "TODO: assess method of Asad Mahmood et al., https://ieeexplore.ieee.org/abstract/document/8077550 for correlated noise"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
